--- a/src/MudBlazor.Docs.Server/Properties/launchSettings.json
+++ b/src/MudBlazor.Docs.Server/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7128;http://localhost:5128",
-      "launchUrl": "components/tooltip",
+      "launchUrl": "components/treeview",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
